update index.html head tags

--- a/zip/index.html
+++ b/zip/index.html
@@ -1,85 +1,79 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>website_title</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <script src="../static/js/main.js"></script>
-  </head>
 
-  <body>
-    <div class="container">
-      <div class="card-columns mt-5">
-        <div class="card">
-          <ul class="card-body nav flex-column text-center">
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./320-50.zip">320-50</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./468-60.zip">468-60</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./728-90.zip">728-90</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./970-90.zip">970-90 </a>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <ul class="card-body nav flex-column text-center">
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./120-600.zip">120-600</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./160-600.zip">160-600</a>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <ul class="card-body nav flex-column text-center">
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./300-250.zip">300-250</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./326-280.zip">326-280</a>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <ul class="card-body nav flex-column text-center">
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./200-200.zip">200-200</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./250-250.zip">250-250</a>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <ul class="card-body nav flex-column text-center">
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./300-600.zip">300-600</a>
-            </li>
-          </ul>
-        </div>
-        <div class="card">
-          <ul class="card-body nav flex-column text-center">
-            <li class="nav-item">
-              <a class="nav-link disabled" href="./320-100.zip">320-100</a>
-            </li>
-          </ul>
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <title>website_title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="card-columns mt-5">
+      <div class="card">
+        <ul class="card-body nav flex-column text-center">
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./320-50.zip">320-50</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./468-60.zip">468-60</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./728-90.zip">728-90</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./970-90.zip">970-90 </a>
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <ul class="card-body nav flex-column text-center">
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./120-600.zip">120-600</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./160-600.zip">160-600</a>
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <ul class="card-body nav flex-column text-center">
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./300-250.zip">300-250</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./326-280.zip">326-280</a>
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <ul class="card-body nav flex-column text-center">
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./200-200.zip">200-200</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./250-250.zip">250-250</a>
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <ul class="card-body nav flex-column text-center">
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./300-600.zip">300-600</a>
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <ul class="card-body nav flex-column text-center">
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./320-100.zip">320-100</a>
+          </li>
+        </ul>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
