--- a/googlewebdesigner/300-250/300-250.html
+++ b/googlewebdesigner/300-250/300-250.html
@@ -535,6 +535,47 @@
     #page1.gwd-play-animation .gwd-gen-jlktgwdanimation {
       animation: 11s linear 0s 1 normal forwards running gwd-gen-jlktgwdanimation_gwd-keyframes;
     }
+    .gwd-image-5fta {
+      position: absolute;
+      width: 194px;
+      height: 113px;
+      left: 53px;
+      top: -135px;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+    }
+    .gwd-image-tiba {
+      position: absolute;
+      width: 186px;
+      height: 74px;
+      left: 72px;
+      top: -125px;
+    }
+    @keyframes gwd-gen-mun8gwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      78.5714% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: cubic-bezier(0.42, 0, 0.495, 1.195);
+      }
+      84.2857% {
+        transform: translate3d(0px, 204px, 0px);
+        animation-timing-function: linear;
+      }
+      95.7143% {
+        transform: translate3d(0px, 204px, 0px);
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        transform: translate3d(0px, 404px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-mun8gwdanimation {
+      animation: 14s linear 0s 1 normal forwards running gwd-gen-mun8gwdanimation_gwd-keyframes;
+    }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
   <script data-source="gwd_webcomponents_v1_min.js" data-version="2" data-exports-type="gwd_webcomponents_v1" src="gwd_webcomponents_v1_min.js"></script>
@@ -585,7 +626,9 @@
           <gwd-image id="header4d" source="assets/header4d.png" scaling="none" class="gwd-image-1jep gwd-gen-1wpbgwdanimation"></gwd-image>
           <gwd-image id="long-text" source="assets/long-text.png" scaling="stretch" class="gwd-image-wz8d gwd-gen-151ygwdanimation"></gwd-image>
           <gwd-image id="header5d" source="assets/header5d.png" scaling="stretch" class="gwd-image-w4hj gwd-gen-jlktgwdanimation"></gwd-image>
-          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="13000"></div>
+          <gwd-image id="roshn-logo" source="assets/roshn-logo.png" scaling="stretch" class="gwd-image-5fta gwd-gen-mun8gwdanimation"></gwd-image>
+          <gwd-image id="hashtag" source="assets/hashtag.png" scaling="stretch" class="gwd-image-tiba"></gwd-image>
+          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="16100"></div>
         </div>
       </gwd-page>
     </gwd-pagedeck>
