--- a/googlewebdesigner/300-250/300-250.html
+++ b/googlewebdesigner/300-250/300-250.html
@@ -576,6 +576,250 @@
     #page1.gwd-play-animation .gwd-gen-mun8gwdanimation {
       animation: 14s linear 0s 1 normal forwards running gwd-gen-mun8gwdanimation_gwd-keyframes;
     }
+    @keyframes gwd-gen-1y6kgwdanimation_gwd-keyframes {
+      0% {
+        top: -125px;
+        left: 72px;
+        animation-timing-function: linear;
+      }
+      81.1765% {
+        top: -125px;
+        left: 57px;
+        animation-timing-function: ease-in-out;
+      }
+      85.2941% {
+        top: 49px;
+        left: 57px;
+        animation-timing-function: linear;
+      }
+      97.0588% {
+        top: 49px;
+        left: 57px;
+        animation-timing-function: ease-in;
+      }
+      100% {
+        top: -193px;
+        left: 57px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1y6kgwdanimation {
+      animation: 17s linear 0s 1 normal forwards running gwd-gen-1y6kgwdanimation_gwd-keyframes;
+    }
+    .gwd-image-1plz {
+      position: absolute;
+      top: 281px;
+      width: 213px;
+      height: 26px;
+      left: 44px;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+    }
+    @keyframes gwd-gen-1qfqgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      84.1176% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: cubic-bezier(0, 0, 0.525, 1.095);
+      }
+      88.2353% {
+        transform: translate3d(0px, -150px, 0px);
+        animation-timing-function: linear;
+      }
+      97.0588% {
+        transform: translate3d(0px, -150px, 0px);
+        animation-timing-function: ease-in;
+      }
+      100% {
+        transform: translate3d(0px, -392px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1qfqgwdanimation {
+      animation: 17s linear 0s 1 normal forwards running gwd-gen-1qfqgwdanimation_gwd-keyframes;
+    }
+    .gwd-image-19vh {
+      position: absolute;
+      width: 213px;
+      height: 39px;
+      left: 44px;
+      top: -46px;
+      opacity: 0;
+      transform: translate3d(0px, 0px, 0px);
+      transform-style: preserve-3d;
+    }
+    @keyframes gwd-gen-1j1kgwdanimation_gwd-keyframes {
+      0% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        top: -46px;
+        animation-timing-function: linear;
+      }
+      84.1176% {
+        opacity: 1;
+        transform: translate3d(0px, 0px, 0px);
+        top: -46px;
+        animation-timing-function: linear;
+      }
+      85.2941% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        top: -45px;
+        animation-timing-function: linear;
+      }
+      88.2353% {
+        opacity: 0;
+        transform: translate3d(0px, 177px, 0px);
+        top: -45px;
+        animation-timing-function: cubic-bezier(0, 0, 0.525, 1.105);
+      }
+      91.1765% {
+        opacity: 1;
+        transform: translate3d(0px, 207px, 0px);
+        top: -45px;
+        animation-timing-function: linear;
+      }
+      97.0588% {
+        opacity: 1;
+        transform: translate3d(0px, 207px, 0px);
+        top: -45px;
+        animation-timing-function: ease-in;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(0px, -35px, 0px);
+        top: -45px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1j1kgwdanimation {
+      animation: 17s linear 0s 1 normal forwards running gwd-gen-1j1kgwdanimation_gwd-keyframes;
+    }
+    .gwd-image-als6 {
+      position: absolute;
+      width: 90px;
+      height: 90px;
+      left: 105px;
+      top: 272px;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+    }
+    @keyframes gwd-gen-1kbwgwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      89.8396% {
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: ease-out;
+      }
+      93.5829% {
+        transform: translate3d(0px, -192px, 0px);
+        animation-timing-function: linear;
+      }
+      97.861% {
+        transform: translate3d(0px, -192px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(-46px, -192px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1kbwgwdanimation {
+      animation: 18.7s linear 0s 1 normal forwards running gwd-gen-1kbwgwdanimation_gwd-keyframes;
+    }
+    .gwd-image-wj18 {
+      position: absolute;
+      width: 71px;
+      height: 70px;
+      top: 90px;
+      left: 336px;
+      opacity: 1;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+    }
+    .gwd-div-r7pr {
+      position: absolute;
+      height: 70px;
+      top: 90px;
+      background-image: none;
+      background-color: rgb(232, 231, 233);
+      border-style: solid;
+      border-image-source: none;
+      border-image-width: 1;
+      border-image-outset: 0;
+      border-image-repeat: stretch;
+      border-color: rgb(192, 152, 90);
+      border-width: 0px 2px 0px 0px;
+      width: 100px;
+      left: 319px;
+      opacity: 1;
+      transform-style: preserve-3d;
+      transform: translate3d(0px, 0px, 0px);
+    }
+    @keyframes gwd-gen-3ibcgwdanimation_gwd-keyframes {
+      0% {
+        opacity: 1;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      97.2973% {
+        opacity: 0;
+        transform: translate3d(0px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      98.3784% {
+        opacity: 0;
+        transform: translate3d(-135px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+      100% {
+        opacity: 1;
+        transform: translate3d(-135px, 0px, 0px);
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-3ibcgwdanimation {
+      animation: 18.5s linear 0s 1 normal forwards running gwd-gen-3ibcgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1rhogwdanimation_gwd-keyframes {
+      0% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 1;
+        height: 70px;
+        animation-timing-function: linear;
+      }
+      96.2567% {
+        transform: translate3d(0px, 0px, 0px);
+        opacity: 1;
+        height: 70px;
+        animation-timing-function: linear;
+      }
+      96.7914% {
+        transform: translate3d(-137px, 0px, 0px);
+        opacity: 0;
+        height: 70px;
+        animation-timing-function: linear;
+      }
+      97.3262% {
+        transform: translate3d(-137px, 0px, 0px);
+        opacity: 1;
+        height: 70px;
+        animation-timing-function: linear;
+      }
+      100% {
+        transform: translate3d(-250px, 10px, 0px);
+        opacity: 1;
+        height: 50px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1rhogwdanimation {
+      animation: 18.7s linear 0s 1 normal forwards running gwd-gen-1rhogwdanimation_gwd-keyframes;
+    }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
   <script data-source="gwd_webcomponents_v1_min.js" data-version="2" data-exports-type="gwd_webcomponents_v1" src="gwd_webcomponents_v1_min.js"></script>
@@ -609,7 +853,6 @@
 
 <body>
   <gwd-google-ad id="gwd-ad" polite-load="">
-    <gwd-metric-configuration></gwd-metric-configuration>
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
       <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-page-1r2a" data-gwd-width="300px" data-gwd-height="250px" data-gwd-animation-labels="start,0">
         <div class="gwd-page-content gwd-page-size">
@@ -627,8 +870,13 @@
           <gwd-image id="long-text" source="assets/long-text.png" scaling="stretch" class="gwd-image-wz8d gwd-gen-151ygwdanimation"></gwd-image>
           <gwd-image id="header5d" source="assets/header5d.png" scaling="stretch" class="gwd-image-w4hj gwd-gen-jlktgwdanimation"></gwd-image>
           <gwd-image id="roshn-logo" source="assets/roshn-logo.png" scaling="stretch" class="gwd-image-5fta gwd-gen-mun8gwdanimation"></gwd-image>
-          <gwd-image id="hashtag" source="assets/hashtag.png" scaling="stretch" class="gwd-image-tiba"></gwd-image>
-          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="16100"></div>
+          <gwd-image id="hashtag" source="assets/hashtag.png" scaling="stretch" class="gwd-image-tiba gwd-gen-1y6kgwdanimation"></gwd-image>
+          <gwd-image id="icons2" source="assets/icons2.png" scaling="stretch" class="gwd-image-19vh gwd-gen-1j1kgwdanimation"></gwd-image>
+          <gwd-image id="icons1" source="assets/icons1.png" scaling="stretch" class="gwd-image-1plz gwd-gen-1qfqgwdanimation"></gwd-image>
+          <gwd-image id="PIF-text" source="assets/PIF-text.png" scaling="stretch" class="gwd-image-wj18 gwd-gen-3ibcgwdanimation"></gwd-image>
+          <div class="gwd-div-r7pr gwd-gen-1rhogwdanimation" id="PIF-line"></div>
+          <gwd-image id="PIF-logo" source="assets/PIF-logo.png" scaling="stretch" class="gwd-image-als6 gwd-gen-1kbwgwdanimation"></gwd-image>
+          <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="20000"></div>
         </div>
       </gwd-page>
     </gwd-pagedeck>
