--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     </div>
 
 
+    <div class="mt-5 mx-auto embed-responsive" style="width: 300px;height: 250px;">
+      <iframe src="./publish/300-250/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
+
+
+    <div class="mt-5 mx-auto embed-responsive" style="width: 326px;height: 280px;">
+      <iframe src="./publish/326-280/index.html" class="embed-responsive-item" frameborder="0"></iframe>
+    </div>
+
+
     <div class="mt-5 mx-auto embed-responsive" style="width: 728px;height: 90px;">
       <iframe src="./publish/728-90/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
