--- a/zip/index.html
+++ b/zip/index.html
@@ -41,10 +41,10 @@
       <div class="card">
         <ul class="card-body nav flex-column text-center">
           <li class="nav-item">
-            <a class="nav-link disabled" href="./300-250.zip">300-250</a>
+            <a class="nav-link" href="./300-250.zip">300-250</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="./326-280.zip">326-280</a>
+            <a class="nav-link" href="./326-280.zip">326-280</a>
           </li>
         </ul>
       </div>
