--- a/googlewebdesigner/300-250/300-250.html
+++ b/googlewebdesigner/300-250/300-250.html
@@ -882,9 +882,9 @@
           <gwd-image id="header2" source="assets/header2.png" scaling="none" class="gwd-image-10us gwd-gen-oo5xgwdanimation gwd-image-ne49"></gwd-image>
           <gwd-image id="header2d" source="assets/header2d.png" scaling="none" class="gwd-image-1jep gwd-gen-ocv0gwdanimation"></gwd-image>
           <gwd-image id="header3" source="assets/header3.png" scaling="none" class="gwd-image-10us gwd-gen-155dgwdanimation gwd-image-158x"></gwd-image>
-          <gwd-image id="header3d" source="assets/header3d.png" scaling="none" class="gwd-image-1jep gwd-gen-vgnpgwdanimation"></gwd-image>
+          <gwd-image id="header3d" source="assets/header3d.png" scaling="none" class="gwd-image-1jep gwd-gen-vgnpgwdanimation" data-gwd-tl-hidden=""></gwd-image>
           <gwd-image id="header4" source="assets/header4.png" scaling="none" class="gwd-image-10us gwd-gen-19j1gwdanimation gwd-image-1w6u"></gwd-image>
-          <gwd-image id="header4d" source="assets/header4d.png" scaling="none" class="gwd-image-1jep gwd-gen-1wpbgwdanimation"></gwd-image>
+          <gwd-image id="header4d" source="assets/header4d.png" scaling="none" class="gwd-image-1jep gwd-gen-1wpbgwdanimation" data-gwd-tl-hidden=""></gwd-image>
           <gwd-image id="long-text" source="assets/long-text.png" scaling="stretch" class="gwd-image-wz8d gwd-gen-151ygwdanimation"></gwd-image>
           <gwd-image id="header5d" source="assets/header5d.png" scaling="stretch" class="gwd-image-w4hj gwd-gen-jlktgwdanimation"></gwd-image>
           <gwd-image id="roshn-logo" source="assets/roshn-logo.png" scaling="stretch" class="gwd-image-5fta gwd-gen-mun8gwdanimation"></gwd-image>
