--- a/zip/index.html
+++ b/zip/index.html
@@ -15,12 +15,6 @@
       <div class="card">
         <ul class="card-body nav flex-column text-center">
           <li class="nav-item">
-            <a class="nav-link disabled" href="./320-50.zip">320-50</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="./468-60.zip">468-60</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="./728-90.zip">728-90</a>
           </li>
           <li class="nav-item">
@@ -69,6 +63,16 @@
         <ul class="card-body nav flex-column text-center">
           <li class="nav-item">
             <a class="nav-link disabled" href="./320-100.zip">320-100</a>
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <ul class="card-body nav flex-column text-center">
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./320-50.zip">320-50</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="./468-60.zip">468-60</a>
           </li>
         </ul>
       </div>
