--- a/googlewebdesigner/300-250/gwd_preview_300-250/index.html
+++ b/googlewebdesigner/300-250/gwd_preview_300-250/index.html
@@ -9,6 +9,7 @@
   <link href="gwdpagedeck_style.css" rel="stylesheet" data-version="14" data-exports-type="gwd-pagedeck">
   <link href="gwdgooglead_style.css" rel="stylesheet" data-version="8" data-exports-type="gwd-google-ad">
   <link href="gwdimage_style.css" rel="stylesheet" data-version="15" data-exports-type="gwd-image">
+  <link href="gwdtaparea_style.css" rel="stylesheet" data-version="7" data-exports-type="gwd-taparea">
   <style type="text/css" id="gwd-lightbox-style">.gwd-lightbox {
     overflow: hidden;
 }</style>
@@ -2088,6 +2089,13 @@ body {
     animation: 18.7s linear 0s 1 normal forwards gwd-gen-1rhogwdanimation_gwd-keyframes;
     -webkit-animation: 18.7s linear 0s 1 normal forwards gwd-gen-1rhogwdanimation_gwd-keyframes;
     -moz-animation: 18.7s linear 0s 1 normal forwards gwd-gen-1rhogwdanimation_gwd-keyframes;
+}
+.gwd-taparea-1v94 {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 300px;
+    height: 250px;
 }</style><style type="text/css" data-gwd-secondary-animations="">#page1.start .gwd-gen-10yjgwdanimation {
     animation: 11s linear 0s 1 normal forwards gwd-gen-10yjgwdanimation_gwd-keyframes_start;
     -webkit-animation: 11s linear 0s 1 normal forwards gwd-gen-10yjgwdanimation_gwd-keyframes_start;
@@ -3931,52 +3939,64 @@ body {
       // GWD Predefined Function
       gwd.actions.timeline.gotoAndPlay('page1', 'start');
     };
+    gwd.auto_Gwd_taparea_1Action = function(event) {
+      // GWD Predefined Function
+      gwd.actions.gwdGoogleAd.exit('gwd-ad', 'roshn-link', 'https://www.roshn.sa/', false, false, 'page1');
+    };
   </script>
   <script type="text/javascript" gwd-events="registration">
     // Support code for event handling in Google Web Designer
     // This script block is auto-generated. Please do not edit!
     gwd.actions.events.registerEventHandlers = function(event) {
       gwd.actions.events.addHandler('page1', 'event-1', gwd.auto_Page1Event_1, false);
+      gwd.actions.events.addHandler('gwd-taparea_1', 'action', gwd.auto_Gwd_taparea_1Action, false);
       gwd.actions.timeline.captureAnimationEnd(document.body);
     };
     gwd.actions.events.deregisterEventHandlers = function(event) {
       gwd.actions.events.removeHandler('page1', 'event-1', gwd.auto_Page1Event_1, false);
+      gwd.actions.events.removeHandler('gwd-taparea_1', 'action', gwd.auto_Gwd_taparea_1Action, false);
       gwd.actions.timeline.releaseAnimationEnd(document.body);
     };
     document.addEventListener("DOMContentLoaded", gwd.actions.events.registerEventHandlers);
     document.addEventListener("unload", gwd.actions.events.deregisterEventHandlers);
   </script>
+  <script data-source="gwdtaparea_min.js" data-version="7" data-exports-type="gwd-taparea" src="gwdtaparea_min.js"></script>
 </head>
 
 <body>
   <gwd-google-ad id="gwd-ad">
+    <gwd-metric-configuration>
+      <gwd-metric-event source="gwd-taparea_1" event="tapareaexit" metric="" exit="Exit"></gwd-metric-event>
+    </gwd-metric-configuration>
     <gwd-pagedeck class="gwd-page-container" id="pagedeck">
       <gwd-page id="page1" class="gwd-page-wrapper gwd-page-size gwd-lightbox gwd-page-1r2a" data-gwd-width="300px" data-gwd-height="250px">
         <div class="gwd-page-content gwd-page-size">
-          <gwd-image id="bigtext1" source="bigtext1.png?1597692618123" scaling="stretch" class="gwd-image-1czz gwd-gen-10yjgwdanimation"></gwd-image>
-          <gwd-image id="bigtext2" source="bigtext2.png?1597692618123" scaling="stretch" class="gwd-image-1s2a gwd-gen-12p2gwdanimation"></gwd-image>
-          <gwd-image id="bigtext3" source="bigtext3.png?1597692618123" scaling="stretch" class="gwd-image-1931 gwd-gen-5n2agwdanimation"></gwd-image>
-          <gwd-image id="header1" source="header1.png?1597692618123" scaling="none" class="gwd-image-10us gwd-gen-1tr4gwdanimation gwd-image-12ei"></gwd-image>
-          <gwd-image id="header1d" source="header1d.png?1597692618123" scaling="none" class="gwd-image-1jep gwd-gen-1bmdgwdanimation gwd-image-e5zp"></gwd-image>
-          <gwd-image id="header2" source="header2.png?1597692618123" scaling="none" class="gwd-image-10us gwd-gen-oo5xgwdanimation gwd-image-ne49"></gwd-image>
-          <gwd-image id="header2d" source="header2d.png?1597692618123" scaling="none" class="gwd-image-1jep gwd-gen-ocv0gwdanimation"></gwd-image>
-          <gwd-image id="header3" source="header3.png?1597692618123" scaling="none" class="gwd-image-10us gwd-gen-155dgwdanimation gwd-image-158x"></gwd-image>
-          <gwd-image id="header3d" source="header3d.png?1597692618123" scaling="none" class="gwd-image-1jep gwd-gen-vgnpgwdanimation"></gwd-image>
-          <gwd-image id="header4" source="header4.png?1597692618123" scaling="none" class="gwd-image-10us gwd-gen-19j1gwdanimation gwd-image-1w6u"></gwd-image>
-          <gwd-image id="header4d" source="header4d.png?1597692618123" scaling="none" class="gwd-image-1jep gwd-gen-1wpbgwdanimation"></gwd-image>
-          <gwd-image id="long-text" source="long-text.png?1597692618123" scaling="stretch" class="gwd-image-wz8d gwd-gen-151ygwdanimation"></gwd-image>
-          <gwd-image id="header5d" source="header5d.png?1597692618123" scaling="stretch" class="gwd-image-w4hj gwd-gen-jlktgwdanimation"></gwd-image>
-          <gwd-image id="roshn-logo" source="roshn-logo.png?1597692618123" scaling="stretch" class="gwd-image-5fta gwd-gen-mun8gwdanimation"></gwd-image>
-          <gwd-image id="hashtag" source="hashtag.png?1597692618123" scaling="stretch" class="gwd-image-tiba gwd-gen-1y6kgwdanimation"></gwd-image>
-          <gwd-image id="icons2" source="icons2.png?1597692618123" scaling="stretch" class="gwd-image-19vh gwd-gen-1j1kgwdanimation"></gwd-image>
-          <gwd-image id="icons1" source="icons1.png?1597692618123" scaling="stretch" class="gwd-image-1plz gwd-gen-1qfqgwdanimation"></gwd-image>
-          <gwd-image id="PIF-text" source="PIF-text.png?1597692618123" scaling="stretch" class="gwd-image-wj18 gwd-gen-3ibcgwdanimation"></gwd-image>
+          <gwd-image id="bigtext1" source="bigtext1.png?1597705632187" scaling="stretch" class="gwd-image-1czz gwd-gen-10yjgwdanimation"></gwd-image>
+          <gwd-image id="bigtext2" source="bigtext2.png?1597705632187" scaling="stretch" class="gwd-image-1s2a gwd-gen-12p2gwdanimation"></gwd-image>
+          <gwd-image id="bigtext3" source="bigtext3.png?1597705632187" scaling="stretch" class="gwd-image-1931 gwd-gen-5n2agwdanimation"></gwd-image>
+          <gwd-image id="header1" source="header1.png?1597705632187" scaling="none" class="gwd-image-10us gwd-gen-1tr4gwdanimation gwd-image-12ei"></gwd-image>
+          <gwd-image id="header1d" source="header1d.png?1597705632187" scaling="none" class="gwd-image-1jep gwd-gen-1bmdgwdanimation gwd-image-e5zp"></gwd-image>
+          <gwd-image id="header2" source="header2.png?1597705632187" scaling="none" class="gwd-image-10us gwd-gen-oo5xgwdanimation gwd-image-ne49"></gwd-image>
+          <gwd-image id="header2d" source="header2d.png?1597705632187" scaling="none" class="gwd-image-1jep gwd-gen-ocv0gwdanimation"></gwd-image>
+          <gwd-image id="header3" source="header3.png?1597705632187" scaling="none" class="gwd-image-10us gwd-gen-155dgwdanimation gwd-image-158x"></gwd-image>
+          <gwd-image id="header3d" source="header3d.png?1597705632187" scaling="none" class="gwd-image-1jep gwd-gen-vgnpgwdanimation"></gwd-image>
+          <gwd-image id="header4" source="header4.png?1597705632187" scaling="none" class="gwd-image-10us gwd-gen-19j1gwdanimation gwd-image-1w6u"></gwd-image>
+          <gwd-image id="header4d" source="header4d.png?1597705632187" scaling="none" class="gwd-image-1jep gwd-gen-1wpbgwdanimation"></gwd-image>
+          <gwd-image id="long-text" source="long-text.png?1597705632187" scaling="stretch" class="gwd-image-wz8d gwd-gen-151ygwdanimation"></gwd-image>
+          <gwd-image id="header5d" source="header5d.png?1597705632187" scaling="stretch" class="gwd-image-w4hj gwd-gen-jlktgwdanimation"></gwd-image>
+          <gwd-image id="roshn-logo" source="roshn-logo.png?1597705632187" scaling="stretch" class="gwd-image-5fta gwd-gen-mun8gwdanimation"></gwd-image>
+          <gwd-image id="hashtag" source="hashtag.png?1597705632187" scaling="stretch" class="gwd-image-tiba gwd-gen-1y6kgwdanimation"></gwd-image>
+          <gwd-image id="icons2" source="icons2.png?1597705632187" scaling="stretch" class="gwd-image-19vh gwd-gen-1j1kgwdanimation"></gwd-image>
+          <gwd-image id="icons1" source="icons1.png?1597705632187" scaling="stretch" class="gwd-image-1plz gwd-gen-1qfqgwdanimation"></gwd-image>
+          <gwd-image id="PIF-text" source="PIF-text.png?1597705632187" scaling="stretch" class="gwd-image-wj18 gwd-gen-3ibcgwdanimation"></gwd-image>
           <div class="gwd-div-r7pr gwd-gen-1rhogwdanimation" id="PIF-line"></div>
-          <gwd-image id="PIF-logo" source="PIF-logo.png?1597692618123" scaling="stretch" class="gwd-image-als6 gwd-gen-1kbwgwdanimation"></gwd-image>
+          <gwd-image id="PIF-logo" source="PIF-logo.png?1597705632187" scaling="stretch" class="gwd-image-als6 gwd-gen-1kbwgwdanimation"></gwd-image>
           <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="20000"></div>
+          <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-1v94"></gwd-taparea>
         </div>
       </gwd-page>
     </gwd-pagedeck>
+    <gwd-exit metric="roshn-link" url="https://www.roshn.sa/"></gwd-exit>
   </gwd-google-ad>
   <script type="text/javascript" id="gwd-init-code">
     (function() {
@@ -4018,4 +4038,5 @@ body {
 
 
 <script data-exports-type="gwd-studio-registration">function StudioExports() {
-}</script><script type="text/gwd-admetadata">{"version":1,"type":"GoogleAd","format":"","template":"Banner 3.0.0","politeload":false,"fullscreen":false,"counters":[],"timers":[],"exits":[],"creativeProperties":{"minWidth":300,"minHeight":250,"maxWidth":300,"maxHeight":250},"components":["gwd-google-ad","gwd-image","gwd-page","gwd-pagedeck"],"responsive":false}</script><script data-exports-type="dclk-quick-preview">studio.Enabler.setRushSimulatedLocalEvents(true);</script></body></html>
+Enabler.exit("roshn-link", "https://www.roshn.sa/");
+}</script><script type="text/gwd-admetadata">{"version":1,"type":"GoogleAd","format":"","template":"Banner 3.0.0","politeload":false,"fullscreen":false,"counters":[],"timers":[],"exits":[{"exitId":"roshn-link","url":"https://www.roshn.sa/"}],"creativeProperties":{"minWidth":300,"minHeight":250,"maxWidth":300,"maxHeight":250},"components":["gwd-google-ad","gwd-image","gwd-page","gwd-pagedeck","gwd-taparea"],"responsive":false}</script><script data-exports-type="dclk-quick-preview">studio.Enabler.setRushSimulatedLocalEvents(true);</script></body></html>
