adding loading gif to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <style>
+    .loading {
+      background-image: url(./loading.gif);
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+  </style>
 </head>
 
 
@@ -17,22 +24,22 @@
     </div>
 
 
-    <div class="mt-5 mx-auto embed-responsive" style="width: 300px;height: 250px;">
+    <div class="loading mt-5 mx-auto embed-responsive" style="width: 300px;height: 250px;">
       <iframe src="./publish/300-250/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
 
 
-    <div class="mt-5 mx-auto embed-responsive" style="width: 326px;height: 280px;">
+    <div class="loading mt-5 mx-auto embed-responsive" style="width: 326px;height: 280px;">
       <iframe src="./publish/326-280/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
 
 
-    <div class="mt-5 mx-auto embed-responsive" style="width: 728px;height: 90px;">
+    <div class="loading mt-5 mx-auto embed-responsive" style="width: 728px;height: 90px;">
       <iframe src="./publish/728-90/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
 
 
-    <div class="mt-5 mx-auto embed-responsive" style="width: 970px;height: 90px;">
+    <div class="loading mt-5 mx-auto embed-responsive" style="width: 970px;height: 90px;">
       <iframe src="./publish/970-90/index.html" class="embed-responsive-item" frameborder="0"></iframe>
     </div>
 
