--- a/googlewebdesigner/300-250/300-250.html
+++ b/googlewebdesigner/300-250/300-250.html
@@ -230,10 +230,6 @@
         left: 70px;
         animation-timing-function: linear;
       }
-      10.5882% {
-        left: 71px;
-        animation-timing-function: linear;
-      }
       94.1176% {
         top: -3px;
         left: 70px;
@@ -895,7 +891,7 @@
           <div class="gwd-div-r7pr gwd-gen-1rhogwdanimation" id="PIF-line"></div>
           <gwd-image id="PIF-logo" source="assets/PIF-logo.png" scaling="stretch" class="gwd-image-als6 gwd-gen-1kbwgwdanimation"></gwd-image>
           <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="20000"></div>
-          <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-1v94"></gwd-taparea>
+          <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-1v94" data-gwd-tl-locked="" data-gwd-tl-hidden=""></gwd-taparea>
         </div>
       </gwd-page>
     </gwd-pagedeck>
