--- a/googlewebdesigner/326-280/326-280.html
+++ b/googlewebdesigner/326-280/326-280.html
@@ -158,9 +158,9 @@
     .gwd-image-10us {
       position: absolute;
       width: 116px;
-      height: 107px;
-      top: 67px;
-      left: 480px;
+      height: 85px;
+      top: 84px;
+      left: 350px;
     }
     .gwd-image-1jep {
       position: absolute;
@@ -200,19 +200,23 @@
     }
     @keyframes gwd-gen-1tr4gwdanimation_gwd-keyframes {
       0% {
-        left: 480px;
+        left: 350px;
+        top: 84px;
         animation-timing-function: ease-in-out;
       }
       20% {
-        left: 164px;
+        left: 131px;
+        top: 84px;
         animation-timing-function: linear;
       }
       80% {
-        left: 164px;
+        left: 131px;
+        top: 84px;
         animation-timing-function: ease-in-out;
       }
       100% {
-        left: -140px;
+        left: -170px;
+        top: 84px;
         animation-timing-function: linear;
       }
     }
@@ -228,10 +232,6 @@
       5.8824% {
         top: -3px;
         left: 70px;
-        animation-timing-function: linear;
-      }
-      10.5882% {
-        left: 71px;
         animation-timing-function: linear;
       }
       94.1176% {
@@ -273,31 +273,6 @@
     #page1.gwd-play-animation .gwd-gen-10yjgwdanimation {
       animation: 11s linear 0s 1 normal forwards running gwd-gen-10yjgwdanimation_gwd-keyframes;
     }
-    @keyframes gwd-gen-oo5xgwdanimation_gwd-keyframes {
-      0% {
-        left: 480px;
-        width: 125px;
-        animation-timing-function: ease-in-out;
-      }
-      20% {
-        left: 164px;
-        width: 125px;
-        animation-timing-function: linear;
-      }
-      80% {
-        left: 164px;
-        width: 125px;
-        animation-timing-function: ease-in-out;
-      }
-      100% {
-        left: -140px;
-        width: 125px;
-        animation-timing-function: linear;
-      }
-    }
-    #page1.gwd-play-animation .gwd-gen-oo5xgwdanimation {
-      animation: 2.5s linear 2s 1 normal forwards running gwd-gen-oo5xgwdanimation_gwd-keyframes;
-    }
     @keyframes gwd-gen-ocv0gwdanimation_gwd-keyframes {
       0% {
         left: 302px;
@@ -319,31 +294,6 @@
     #page1.gwd-play-animation .gwd-gen-ocv0gwdanimation {
       animation: 2.5s linear 2s 1 normal forwards running gwd-gen-ocv0gwdanimation_gwd-keyframes;
     }
-    @keyframes gwd-gen-155dgwdanimation_gwd-keyframes {
-      0% {
-        left: 480px;
-        width: 130px;
-        animation-timing-function: ease-in-out;
-      }
-      20% {
-        left: 164px;
-        width: 130px;
-        animation-timing-function: linear;
-      }
-      80% {
-        left: 164px;
-        width: 130px;
-        animation-timing-function: ease-in-out;
-      }
-      100% {
-        left: -140px;
-        width: 130px;
-        animation-timing-function: linear;
-      }
-    }
-    #page1.gwd-play-animation .gwd-gen-155dgwdanimation {
-      animation: 2.5s linear 4s 1 normal forwards running gwd-gen-155dgwdanimation_gwd-keyframes;
-    }
     @keyframes gwd-gen-vgnpgwdanimation_gwd-keyframes {
       0% {
         left: 302px;
@@ -364,27 +314,6 @@
     }
     #page1.gwd-play-animation .gwd-gen-vgnpgwdanimation {
       animation: 2.5s linear 4s 1 normal forwards running gwd-gen-vgnpgwdanimation_gwd-keyframes;
-    }
-    @keyframes gwd-gen-19j1gwdanimation_gwd-keyframes {
-      0% {
-        left: 480px;
-        animation-timing-function: ease-in-out;
-      }
-      20% {
-        left: 164px;
-        animation-timing-function: linear;
-      }
-      80% {
-        left: 164px;
-        animation-timing-function: ease-in-out;
-      }
-      100% {
-        left: -140px;
-        animation-timing-function: linear;
-      }
-    }
-    #page1.gwd-play-animation .gwd-gen-19j1gwdanimation {
-      animation: 2.5s linear 6s 1 normal forwards running gwd-gen-19j1gwdanimation_gwd-keyframes;
     }
     @keyframes gwd-gen-1wpbgwdanimation_gwd-keyframes {
       0% {
@@ -411,18 +340,8 @@
     #page1.gwd-play-animation .gwd-gen-1wpbgwdanimation {
       animation: 2.5s linear 6s 1 normal forwards running gwd-gen-1wpbgwdanimation_gwd-keyframes;
     }
-    .gwd-image-158x {
-      width: 130px;
-    }
-    .gwd-image-1w6u {
-      height: 107px;
-      width: 125px;
-    }
-    .gwd-image-ne49 {
-      width: 125px;
-    }
     .gwd-image-12ei {
-      width: 125px;
+      width: 150px;
     }
     .gwd-image-1931 {
       position: absolute;
@@ -828,6 +747,81 @@
       width: 300px;
       height: 250px;
     }
+    @keyframes gwd-gen-1w7tgwdanimation_gwd-keyframes {
+      0% {
+        left: 350px;
+        top: 84px;
+        animation-timing-function: ease-in-out;
+      }
+      20% {
+        left: 131px;
+        top: 84px;
+        animation-timing-function: linear;
+      }
+      80% {
+        left: 131px;
+        top: 84px;
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        left: -170px;
+        top: 84px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1w7tgwdanimation {
+      animation: 2.5s linear 2s 1 normal forwards running gwd-gen-1w7tgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1tzxgwdanimation_gwd-keyframes {
+      0% {
+        left: 350px;
+        top: 84px;
+        animation-timing-function: ease-in-out;
+      }
+      20% {
+        left: 131px;
+        top: 84px;
+        animation-timing-function: linear;
+      }
+      80% {
+        left: 131px;
+        top: 84px;
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        left: -170px;
+        top: 84px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1tzxgwdanimation {
+      animation: 2.5s linear 4s 1 normal forwards running gwd-gen-1tzxgwdanimation_gwd-keyframes;
+    }
+    @keyframes gwd-gen-1lg7gwdanimation_gwd-keyframes {
+      0% {
+        left: 350px;
+        top: 84px;
+        animation-timing-function: ease-in-out;
+      }
+      20% {
+        left: 131px;
+        top: 84px;
+        animation-timing-function: linear;
+      }
+      80% {
+        left: 131px;
+        top: 84px;
+        animation-timing-function: ease-in-out;
+      }
+      100% {
+        left: -170px;
+        top: 84px;
+        animation-timing-function: linear;
+      }
+    }
+    #page1.gwd-play-animation .gwd-gen-1lg7gwdanimation {
+      animation: 2.5s linear 6s 1 normal forwards running gwd-gen-1lg7gwdanimation_gwd-keyframes;
+    }
   </style>
   <script data-source="googbase_min.js" data-version="4" data-exports-type="googbase" src="googbase_min.js"></script>
   <script data-source="gwd_webcomponents_v1_min.js" data-version="2" data-exports-type="gwd_webcomponents_v1" src="gwd_webcomponents_v1_min.js"></script>
@@ -877,13 +871,13 @@
           <gwd-image id="bigtext1" source="assets/bigtext1.png" scaling="stretch" class="gwd-image-1czz gwd-gen-10yjgwdanimation"></gwd-image>
           <gwd-image id="bigtext2" source="assets/bigtext2.png" scaling="stretch" class="gwd-image-1s2a gwd-gen-12p2gwdanimation"></gwd-image>
           <gwd-image id="bigtext3" source="assets/bigtext3.png" scaling="stretch" class="gwd-image-1931 gwd-gen-5n2agwdanimation"></gwd-image>
-          <gwd-image id="header1" source="assets/header1.png" scaling="none" class="gwd-image-10us gwd-gen-1tr4gwdanimation gwd-image-12ei"></gwd-image>
+          <gwd-image id="header1" source="assets/header1.png" scaling="none" class="gwd-image-10us gwd-gen-1tr4gwdanimation gwd-image-12ei" alignment="center"></gwd-image>
           <gwd-image id="header1d" source="assets/header1d.png" scaling="none" class="gwd-image-1jep gwd-gen-1bmdgwdanimation gwd-image-e5zp"></gwd-image>
-          <gwd-image id="header2" source="assets/header2.png" scaling="none" class="gwd-image-10us gwd-gen-oo5xgwdanimation gwd-image-ne49"></gwd-image>
+          <gwd-image id="header2" source="assets/header2.png" scaling="none" class="gwd-image-10us gwd-image-12ei gwd-gen-1w7tgwdanimation" alignment="center"></gwd-image>
           <gwd-image id="header2d" source="assets/header2d.png" scaling="none" class="gwd-image-1jep gwd-gen-ocv0gwdanimation"></gwd-image>
-          <gwd-image id="header3" source="assets/header3.png" scaling="none" class="gwd-image-10us gwd-gen-155dgwdanimation gwd-image-158x"></gwd-image>
+          <gwd-image id="header3" source="assets/header3.png" scaling="none" class="gwd-image-10us gwd-image-12ei gwd-gen-1tzxgwdanimation" alignment="center"></gwd-image>
           <gwd-image id="header3d" source="assets/header3d.png" scaling="none" class="gwd-image-1jep gwd-gen-vgnpgwdanimation"></gwd-image>
-          <gwd-image id="header4" source="assets/header4.png" scaling="none" class="gwd-image-10us gwd-gen-19j1gwdanimation gwd-image-1w6u"></gwd-image>
+          <gwd-image id="header4" source="assets/header4.png" scaling="none" class="gwd-image-10us gwd-image-12ei gwd-gen-1lg7gwdanimation" alignment="center"></gwd-image>
           <gwd-image id="header4d" source="assets/header4d.png" scaling="none" class="gwd-image-1jep gwd-gen-1wpbgwdanimation"></gwd-image>
           <gwd-image id="long-text" source="assets/long-text.png" scaling="stretch" class="gwd-image-wz8d gwd-gen-151ygwdanimation"></gwd-image>
           <gwd-image id="header5d" source="assets/header5d.png" scaling="stretch" class="gwd-image-w4hj gwd-gen-jlktgwdanimation"></gwd-image>
@@ -895,7 +889,7 @@
           <div class="gwd-div-r7pr gwd-gen-1rhogwdanimation" id="PIF-line"></div>
           <gwd-image id="PIF-logo" source="assets/PIF-logo.png" scaling="stretch" class="gwd-image-als6 gwd-gen-1kbwgwdanimation"></gwd-image>
           <div class="gwd-animation-event event-1-animation" data-event-name="event-1" data-event-time="20000"></div>
-          <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-1v94"></gwd-taparea>
+          <gwd-taparea id="gwd-taparea_1" class="gwd-taparea-1v94" data-gwd-tl-hidden="" data-gwd-tl-locked=""></gwd-taparea>
         </div>
       </gwd-page>
     </gwd-pagedeck>
